Add an example of ser/de for a non-moo type

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,9 +19,10 @@ daq_add_library(LINK_LIBRARIES ipm::ipm)
 ##############################################################################
 
 # Test applications
-daq_add_application( network_object_send_receive network_object_send_receive.cxx TEST LINK_LIBRARIES ipm::ipm )
-daq_add_application( serialization_speed serialization_speed.cxx TEST LINK_LIBRARIES ipm::ipm )
-daq_add_application( serialization_speed_no_ipm serialization_speed_no_ipm.cxx TEST LINK_LIBRARIES nlohmann_json::nlohmann_json)
+daq_add_application( network_object_send_receive network_object_send_receive.cxx TEST LINK_LIBRARIES serialization )
+daq_add_application( serialization_speed serialization_speed.cxx TEST LINK_LIBRARIES serialization )
+daq_add_application( serialization_speed_no_ipm serialization_speed_no_ipm.cxx TEST LINK_LIBRARIES serialization)
+daq_add_application( non_moo_type non_moo_type.cxx TEST LINK_LIBRARIES serialization)
 
 ##############################################################################
 
