--- a/cmake/serializationConfig.cmake.in
+++ b/cmake/serializationConfig.cmake.in
@@ -5,6 +5,8 @@ include(CMakeFindDependencyMacro)
 
 find_dependency(appfwk)
 find_dependency(ipm)
+find_dependency(nlohmann_json)
+find_dependency(msgpack)
 
 if (EXISTS ${CMAKE_SOURCE_DIR}/@PROJECT_NAME@)
 
