Remove dependency on ipm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,29 +5,25 @@ find_package(daq-cmake REQUIRED)
 daq_setup_environment()
 
 find_package(appfwk REQUIRED)
-find_package(ipm REQUIRED)
 find_package(nlohmann_json REQUIRED)
 find_package(msgpack REQUIRED)
+find_package(ers REQUIRED)
 
 ##############################################################################
 # Schema
 
-daq_codegen(fsd.jsonnet TEST TEMPLATES Structs.hpp.j2 Nljs.hpp.j2)
-daq_codegen(networkobjectsender.jsonnet TEMPLATES Structs.hpp.j2 Nljs.hpp.j2)
-daq_codegen(networkobjectreceiver.jsonnet TEMPLATES Structs.hpp.j2 Nljs.hpp.j2)
+daq_codegen(*.jsonnet TEST TEMPLATES Structs.hpp.j2 Nljs.hpp.j2)
 
 ##############################################################################
 # Main library
 
 # We don't have a real library, but we want to create a target for
 # dependents to be able to depend on
-daq_add_library(LINK_LIBRARIES ipm::ipm msgpackc-cxx nlohmann_json::nlohmann_json)
+daq_add_library(LINK_LIBRARIES msgpackc-cxx nlohmann_json::nlohmann_json ers)
 
 ##############################################################################
 
 # Test applications
-daq_add_application( network_object_send_receive network_object_send_receive.cxx TEST LINK_LIBRARIES serialization )
-daq_add_application( serialization_speed serialization_speed.cxx TEST LINK_LIBRARIES serialization )
 daq_add_application( serialization_speed_no_ipm serialization_speed_no_ipm.cxx TEST LINK_LIBRARIES serialization)
 daq_add_application( non_moo_type non_moo_type.cxx TEST LINK_LIBRARIES serialization)
 daq_add_application( inheritance inheritance.cxx TEST LINK_LIBRARIES serialization)
