--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ find_package(appfwk REQUIRED)
 find_package(nlohmann_json REQUIRED)
 find_package(msgpack REQUIRED)
 find_package(logging REQUIRED)
+find_package(ers REQUIRED)
 
 ##############################################################################
 # Schema
